Small repairs in UI and messages

--- a/pages/company/index.mdx
+++ b/pages/company/index.mdx
@@ -224,4 +224,10 @@ Our strategic roadmap for 2025-2027:
       </tr>
     </tbody>
   </table>
+  
+  <div className="nx-mt-4 nx-p-3 nx-bg-yellow-50 nx-border nx-border-yellow-200 nx-rounded-lg dark:nx-bg-yellow-900/20 dark:nx-border-yellow-800">
+    <p className="nx-text-xs nx-text-yellow-800 dark:nx-text-yellow-300">
+      <strong>Disclaimer:</strong> Metrics based on initial experiments and projections. Actual results may vary as the business scales and more historical data is obtained.
+    </p>
+  </div>
 </div> 
