--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -946,7 +946,7 @@ This comprehensive data room provides everything you need to evaluate Market Fit
   <h3>Ready to Learn More?</h3>
   <p>Our team is available to answer questions and provide additional information.</p>
   <div className="contact-links">
-    <a href="mailto:sergio@uncodie.com">sergio@uncodie.com</a>
+    <a href="mailto:sergio@uncodie.com">Data Room Inquiry</a>
     <span className="separator">|</span>
     <a href="tel:+525514364">+52 1 (55) 4364 0787</a>
   </div>
