Update market data with reviewed figures from market-size.mdx - Updated TAM from B to -300B - Corrected CAGR from 32% to 28% (MarTech & AI specific) - Updated SAM from B to .8B - Updated SOM from .2B to .6-3.1B - Fixed market composition percentages and growth rates - Aligned all market references with comprehensive research data

--- a/pages/executive-summary.mdx
+++ b/pages/executive-summary.mdx
@@ -905,7 +905,7 @@ import { InvestmentHighlight, MetricCard, FinancialCard, TimelineCard } from '..
     <InvestmentHighlight
       icon="🌍"
       title="Massive Market Opportunity"
-      description="$50B TAM growing at 32% CAGR with early market entry advantage"
+      description="$150-300B TAM with $67.8B SAM growing at 28% CAGR in MarTech & AI segment"
     />
     
     <InvestmentHighlight
