--- a/pages/market/index.mdx
+++ b/pages/market/index.mdx
@@ -40,9 +40,9 @@ import { NavigationCard } from '../../components/NavigationCard'
 
 # Market Opportunity
 
-## $50B TAM in Sales Automation Growing at 32% CAGR
+## $150-300B TAM in B2B Marketing Growing at 28% CAGR
 
-The sales automation market represents one of the largest and fastest-growing opportunities in enterprise software, driven by the need for businesses to scale efficiently while maintaining personalized customer experiences.
+The B2B marketing automation market represents one of the largest and fastest-growing opportunities in enterprise software, driven by the need for businesses to scale efficiently while maintaining personalized customer experiences.
 
 ## Market Size & Growth
 
@@ -50,19 +50,19 @@ The sales automation market represents one of the largest and fastest-growing op
   <tbody>
     <tr>
       <td><strong>Total Addressable Market (TAM)</strong></td>
-      <td>$50B by 2025</td>
+      <td>$150-300B by 2025</td>
     </tr>
     <tr>
       <td><strong>Compound Annual Growth Rate (CAGR)</strong></td>
-      <td>32% annual growth</td>
+      <td>28% annual growth (MarTech & AI)</td>
     </tr>
     <tr>
       <td><strong>Serviceable Addressable Market (SAM)</strong></td>
-      <td>$12B</td>
+      <td>$67.8B</td>
     </tr>
     <tr>
       <td><strong>Serviceable Obtainable Market (SOM)</strong></td>
-      <td>$1.2B</td>
+      <td>$2.6-3.1B</td>
     </tr>
   </tbody>
 </table>
