--- a/pages/market/market-overview.mdx
+++ b/pages/market/market-overview.mdx
@@ -44,7 +44,7 @@ import { NavigationCard } from '../../components/NavigationCard'
 
 ## Executive Summary
 
-The AI-powered sales automation market represents one of the most significant opportunities in business technology today. With a **$67.8B serviceable addressable market** growing at **32% CAGR**, we are positioned to capture a substantial portion of this expansion through our revolutionary approach to autonomous AI sales employees.
+The AI-powered sales automation market represents one of the most significant opportunities in business technology today. With a **$67.8B serviceable addressable market** growing at **28% CAGR**, we are positioned to capture a substantial portion of this expansion through our revolutionary approach to autonomous AI sales employees.
 
 Unlike traditional sales tools that require constant human oversight, Market Fit delivers truly autonomous AI agents that work 24/7, conduct human-like conversations, and generate measurable revenue without manual intervention.
 
@@ -58,9 +58,9 @@ Unlike traditional sales tools that require constant human oversight, Market Fit
   </div>
   
   <div className="nx-rounded-lg nx-bg-gradient-to-br nx-from-emerald-50 nx-to-emerald-100 nx-p-6 dark:nx-from-emerald-900/20 dark:nx-to-emerald-800/20">
-    <div className="nx-text-4xl nx-font-bold nx-text-emerald-700 dark:nx-text-emerald-400">32%</div>
+    <div className="nx-text-4xl nx-font-bold nx-text-emerald-700 dark:nx-text-emerald-400">28%</div>
     <div className="nx-mt-1 nx-text-sm nx-font-medium nx-text-emerald-600 dark:nx-text-emerald-500">Annual Growth Rate</div>
-    <div className="nx-mt-2 nx-text-xs nx-text-emerald-600 dark:nx-text-emerald-500">CAGR 2024-2030</div>
+    <div className="nx-mt-2 nx-text-xs nx-text-emerald-600 dark:nx-text-emerald-500">CAGR MarTech & AI</div>
   </div>
   
   <div className="nx-rounded-lg nx-bg-gradient-to-br nx-from-amber-50 nx-to-amber-100 nx-p-6 dark:nx-from-amber-900/20 dark:nx-to-amber-800/20">
@@ -72,19 +72,19 @@ Unlike traditional sales tools that require constant human oversight, Market Fit
 
 ### Market Composition
 
-**Sales Engagement & Automation**: $37.7B (56%)
-- Traditional sales engagement platforms
-- CRM automation features
-- Email and sequence management tools
+**B2B Digital Advertising**: $37.7B (56%)
+- Traditional digital advertising platforms
+- LinkedIn, Google Ads, data-driven campaigns
+- Annual growth: 7.7%
 
 **AI & MarTech Platforms**: $10.1B (15%)
 - Emerging AI-powered sales tools
-- Conversation intelligence platforms
-- Predictive analytics solutions
+- Automation and predictive analytics platforms
+- Annual growth: 28% CAGR
 
 **Lead Generation & Qualification**: $20B (29%)
 - Data platforms and enrichment
-- Lead scoring and qualification
+- Lead scoring and qualification systems
 - Prospecting and research tools
 
 ## Market Drivers
